--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,150 @@
-.App {
-  text-align: center;
-}
+html,
+body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  left: 0;
+  top: 0;
+  font-size: 100%; }
+  html .App,
+  body .App {
+    padding: 1rem; }
+  html h1, html h2, html h3, html h4, html h5, html h6,
+  body h1,
+  body h2,
+  body h3,
+  body h4,
+  body h5,
+  body h6 {
+    margin: 1rem 0; }
+  html .row,
+  body .row {
+    position: relative;
+    max-width: 72.5rem;
+    display: block;
+    margin: 0 auto; }
+    html .row [class^="cols"],
+    body .row [class^="cols"] {
+      float: left;
+      min-height: 0.125rem;
+      padding-left: 0.5rem;
+      padding-right: 0.5rem;
+      box-sizing: border-box; }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
+.cols-1 {
+  width: 8.3333333333%; }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.cols-2 {
+  width: 16.6666666667%; }
+
+.cols-3 {
+  width: 25%; }
+
+.cols-4 {
+  width: 33.3333333333%; }
+
+.cols-5 {
+  width: 41.6666666667%; }
+
+.cols-6 {
+  width: 50%; }
+
+.cols-7 {
+  width: 58.3333333333%; }
+
+.cols-8 {
+  width: 66.6666666667%; }
+
+.cols-9 {
+  width: 75%; }
+
+.cols-10 {
+  width: 83.3333333333%; }
+
+.cols-11 {
+  width: 91.6666666667%; }
+
+.cols-12 {
+  width: 100%; }
+
+.text-left {
+  text-align: left; }
+
+.text-right {
+  text-align: right; }
+
+.text-center {
+  text-align: center; }
+
+input, textarea {
+  width: 100% !important;
+  border-radius: 2px;
+  padding: 0.5rem;
+  outline: none;
+  border: 1px solid #cacaca;
+  box-sizing: border-box;
+  resize: none; }
+
+button {
+  border: 1px solid #3593E8;
   color: white;
-}
+  padding: 0.5rem 1.5rem;
+  border-radius: 2px;
+  box-sizing: border-box;
+  transition: 100ms;
+  cursor: pointer;
+  background-color: #3593E8; }
+  button.secondary {
+    border: 1px solid #666666;
+    background-color: #666666; }
+    button.secondary:hover {
+      background-color: #606060; }
+  button:hover {
+    background-color: #1984E8; }
 
-.App-link {
-  color: #61dafb;
-}
+.modal {
+  position: fixed;
+  height: 280px;
+  width: 420px;
+  top: calc(50% - 210px);
+  left: calc(50% - 210px);
+  padding: 1rem;
+  box-sizing: border-box;
+  border-radius: 10px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+  background-color: white;
+  display: none;
+  .content-max-width: calc(420px - 2rem);
+  .content-max-height: calc(280px - 2rem);
+  .content-position: relative; }
+  .modal.open {
+    display: block !important; }
+  .modal .close-btn {
+    background: #dddddd;
+    height: 24px;
+    width: 24px;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-weight: bolder;
+    position: absolute;
+    top: -20px;
+    right: -20px;
+    cursor: pointer; }
+  .modal + .overlay {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 990;
+    background-color: rgba(0, 0, 0, 0.6);
+    display: none; }
+    .modal + .overlay.open {
+      display: block !important; }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/*# sourceMappingURL=App.css.map */
